[package]
name = "ch58x-ble-rt"
version = "0.1.0"
edition = "2021"

[profile.release]
#opt-level = 'z' # Optimize for size
#lto = true

[dependencies]
ch58x = { git = "https://github.com/Slappy2022/ch32-rs-nightlies.git", default-features = false, features = ["ch58x", "critical-section"] }
ch58x-hal = { git = "https://github.com/Slappy2022/ch58x-hal.git" }
embedded-alloc = { git = "https://github.com/Slappy2022/embedded-alloc.git" }
heapless = "0.7.16"
int-enum = { version = "0.5.0", default-features = false }
log = "0.4.17"
#riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }

[build-dependencies]
bindgen = "0.63.0"
cc = { version = "1.0.79", features = ["parallel"] }

[dev-dependencies]
aht10 = "0.0.1"
#critical-section = "1.1.1"
embedded-hal = "0.2.7"
